--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -1,7 +1,9 @@
-<div class="container">
+
     <div class="row">
         <div class="col-lg-12 text-center">
-            <h2>Welcome to IG app</h2>
+            <h1 class="mt-5">Welcome to IG app</h1>
+            <p class="lead">Sign up now</p>
+            <%= link_to  "Sign Up", new_account_registration_path, class: "btn btn-success" %>
+            <%= link_to  "Log In", new_account_session_path, class: "btn btn-primary" %>
         </div>
     </div>
-</div>
