--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,3 +1,10 @@
-<% @posts.each do |post| %>
-    <%= image_tag post.image.url, class: 'img img-fluid' %>
-<% end %>
+<div class="row">
+    <div class=" col-8">
+        <% @posts.each do |post| %>
+        <div>
+        <%= post.account.username %>
+            <%= image_tag post.image.url, class: 'img img-fluid' %>
+        </div>
+        <% end %>
+    </div>
+</div>
